bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if(a<=20) {
    ^In1020:7: error: type mismatch;
 found   : Unit
 required: Boolean
    if (b<=20) {
    ^